deploy/k8s/overlays/testnet-asia-east1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idn-collator
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$binary_remote_addr"
    nginx.ingress.kubernetes.io/websocket-services: "testnet-asia-idn-collator"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - idn-asia-01.testnet.idealabs.network
      secretName: idn-collator-tls
  rules:
    - host: idn-asia-01.testnet.idealabs.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testnet-asia-idn-collator
                port:
                  number: 9944
